# xfce4-hotcorner-plugin

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  cleanRebuild  hotcorner.desktop  zh_TW.gmo
po/: gl.po  xfce4-hotcorner-plugin.pot  zh_TW.po
src/: hotcorner.c  hotcorner.h  util.c  util.h
